# DataFlowParsing

./: CMakeLists.txt  README.md  main.cpp
Common/: byte_order.h  common_functions.h
Receiver/: base_interfaces.h  bin_packet_receiver.cpp  bin_packet_receiver.h  callback.cpp  callback.h  data_markers.h  receiver.cpp  receiver.h  text_packet_receiver.cpp  text_packet_receiver.h
Tests/: callback_test.cpp  callback_test.h  tests.cpp  tests.h
